--- a/src/template/common/footer.html
+++ b/src/template/common/footer.html
@@ -1,3 +1,228 @@
 <footer class="footer">
+    <div class="footer__mobile footer__inner container">
+        <div class="footer__mobile-block f-ratings">
+            <p class="footer__title">Отзывы и рейтинги</p>
 
+            <div class="f-ratings__layout f-ratings__layout--mobile">
+                <a href="#">
+                    <img src="images/content/footer/ya.svg" alt="">
+                </a>
+
+                <a href="#">
+                    <img src="images/content/footer/2gis.svg" alt="">
+                </a>
+            </div>
+        </div>
+
+        <div class="footer__mobile-block f-reqs">
+            <p class="footer__title">Реквизиты</p>
+
+            <p>ООО «ДРИМЛИД»</p>
+            <p>ОГРН 1207700153385</p>
+            <p>ИНН 9724011229</p>
+            <p>Генеральный директор Малыхин Андрей Львович</p>
+        </div>
+
+        <div class="footer__mobile-block f-gos">
+            <p class="footer__title">
+                <a href="#" target="_blank">
+                    <img width="147" height="32" src="images/content/footer/mincifri.svg" alt="Минцифры России">
+                </a>
+            </p>
+
+            <p>Государственная аккредитация ООО&nbsp;«ДРИМЛИД» является аккредитованной организацией, осуществляющей деятельность в области информационных технологий</p>
+        </div>
+
+        <div class="footer__mobile-block f-gos">
+            <p class="footer__title">
+                <a href="#" target="_blank">
+                    <img width="115" height="32" src="images/content/footer/skolkovo.svg" alt="Сколково">
+                </a>
+            </p>
+        </div>
+
+        <div class="footer__mobile-block">
+            <p class="footer__title">Социальные сети</p>
+
+            <div class="f-socials">
+                <a class="social-link" href="#" target="_blank" title="Наш Telegram" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#tg_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Наш WhatsApp" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#wa_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Наш Instagram" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#inst_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Мы Вконтакте" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#vk_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Мы на YouTube" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#yt_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Мы на Behance" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#be_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Мы на LinkedIn" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#li_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Мы в Steam" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#steam_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Мы на VC.RU" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#vc_icon" />
+                    </svg>
+                </a>
+
+                <a class="social-link" href="#" target="_blank" title="Мы на Хабре" rel="nofollow noreferrer">
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#habr_icon" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <div class="footer__mobile-block">
+            <ul class="f-service-menu">
+                <li>
+                    <a href="#">Политика обработки персональных данных</a>
+                </li>
+                <li>
+                    <a href="#">Политика конфиденциальности</a>
+                </li>
+                <li>
+                    <a href="#">Карта сайта</a>
+                </li>
+                <li>
+                    © 2022 Все права защищены
+                </li>
+                <li>
+                    <a class="coala" href="#" target="_blank" rel="nofollow noreferrer">
+                        <svg aria-hidden="true">
+                            <use xlink:href="images/sprite.svg#coala" />
+                        </svg>
+                        <span>Дизайн с характером<br> Coalla Agency</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer__mobile-block">
+            <div class="f-accordion">
+                <button class="js-accordion-toggler f-accordion__toggler" type="button">
+                    <span>Разработка игр</span>
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#chevron_down_16" />
+                    </svg>
+                </button>
+
+                <div class="f-accordion__body">
+                    <ul class="f-accordion__menu">
+                        <li><a href="#">Мобильные игры</a></li>
+                        <li><a href="#">Компьютерные игры</a></li>
+                        <li><a href="#">Браузерные игры</a></li>
+                        <li><a href="#">Unreal Engine</a></li>
+                        <li><a href="#">Unity</a></li>
+                        <li><a href="#">2D игры</a></li>
+                        <li><a href="#">3D игры</a></li>
+                        <li><a href="#">RPG</a></li>
+                        <li><a href="#">MMO</a></li>
+                        <li><a href="#">FPS</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="f-accordion">
+                <button class="js-accordion-toggler f-accordion__toggler" type="button">
+                    <span>Контакты</span>
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#chevron_down_16" />
+                    </svg>
+                </button>
+
+                <div class="f-accordion__body">
+                    <p>+7 499 113-44-31</p>
+                    <p><a href="mailto:info@dreamcraftstudio.ru">info@dreamcraftstudio.ru</a></p>
+                    <p>115409 г.Москва, ш. Каширское, д. 66, корп. 2, офис 52</p>
+                </div>
+            </div>
+
+            <div class="f-accordion">
+                <button class="js-accordion-toggler f-accordion__toggler" type="button">
+                    <span>Клиентам</span>
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#chevron_down_16" />
+                    </svg>
+                </button>
+
+                <div class="f-accordion__body">
+                    <ul class="f-accordion__menu">
+                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#">О компании</a></li>
+                        <li><a href="#">Частые вопросы</a></li>
+                        <li><a href="#">Портфолио</a></li>
+                        <li><a href="#">Блог</a></li>
+                        <li><a href="#">Прайс</a></li>
+                        <li><a href="#">Гарантии</a></li>
+                        <li><a href="#">СМИ о нас</a></li>
+                        <li><a href="#">Вакансии</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="f-accordion">
+                <button class="js-accordion-toggler f-accordion__toggler" type="button">
+                    <span>Услуги</span>
+                    <svg aria-hidden="true">
+                        <use xlink:href="images/sprite.svg#chevron_down_16" />
+                    </svg>
+                </button>
+
+                <div class="f-accordion__body">
+                    <ul class="f-accordion__menu">
+                        <li><a href="#">Разработка промо-игр</a></li>
+                        <li><a href="#">Создание питч-презентаций</a></li>
+                        <li><a href="#">Разработка ГДД</a></li>
+                        <li><a href="#">Геймдизайн</a></li>
+                        <li><a href="#">Графика для игр</a></li>
+                        <li><a href="#">Портирование игр</a></li>
+                        <li><a href="#">Озвучка игр</a></li>
+                        <li><a href="#">Продвижение игр</a></li>
+                        <li><a href="#">Тестирование игр</a></li>
+                        <li><a href="#">Локализация игр</a></li>
+                        <li><a href="#">Издательство игр</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#">Консалтинг</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer__desktop footer__inner container"></div>
 </footer>
