--- a/src/css/styles/_footer.scss
+++ b/src/css/styles/_footer.scss
@@ -1,401 +1,218 @@
 .footer {
+    background: linear-gradient(0.85deg, #0045A2 0.73%, #2FA5E6 84.02%, #EFF8FF 99.27%);
+    color: #fff;
     flex-shrink: 0;
+    position: relative;
+    z-index: 1;
 
-    &__top {
-        background-color: var(--light_blue_4);
-        padding-top: 48px;
-        padding-bottom: 48px;
-        @media(min-width: $hd) {
-            padding-top: 96px;
+    &::before {
+        background: url("../images/backgrounds/footer/mobile.svg") no-repeat 50% 100% / 100% auto;
+        bottom: 0;
+        content: '';
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 0;
+        @media(min-width: $md) {
+            background: url("../images/backgrounds/footer/desktop.svg") no-repeat 50% 100% / 100% auto;
         }
     }
 
-    &__top-top {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 24px;
-        margin-bottom: 24px;
-        @media(min-width: $hd) {
-            margin-bottom: 48px;
+    &__inner {
+        position: relative;
+        z-index: 1;
+    }
+
+    &__mobile {
+        font-family: var(--secondary_font);
+        font-size: 14px;
+        line-height: 1.28571;
+        padding-top: 55px;
+        padding-bottom: 90px;
+        @media(min-width: $md) {
+            display: none;
         }
-        @media(min-width: 1350px) {
-            position: relative;
-            z-index: 1;
+
+        .footer__title {
+            font-size: 16px;
         }
     }
 
-    &__logo {
-        display: block;
-        order: 1;
-        width: 200px;
-        @media(max-width: $hd - 0.01px) {
-            margin-right: auto;
+    &__mobile-block {
+        &:not(:last-child) {
+            margin-bottom: 24px;
+        }
+    }
+
+    &__title {
+        font-weight: 600;
+
+        &:not(:last-child) {
+            margin-bottom: 16px;
+        }
+
+        a {
+            display: inline-block;
         }
 
         img {
             display: block;
         }
     }
-    /*&__to-top {
-        display: block;
-        height: 45px;
-        order: 2;
-        width: 45px;
-        @media(min-width: $hd) {
-            order: 3;
-        }
-        @media(min-width: 1350px) {
-            left: auto;
-            position: absolute;
-            right: -55px;
-            top: -55px;
-            z-index: 1;
-        }
-        @include hover {
-            svg {
-                fill: var(--blue_7);
-            }
-        }
-        @include active {
-            svg {
-                fill: var(--blue_8);
-            }
-        }
 
-        svg {
-            fill: var(--blue_1);
-            height: 45px;
-            width: 45px;
-        }
-    }*/
-    &__buttons {
-        align-items: center;
-        display: flex;
-        gap: 24px;
-        flex-grow: 1;
-        order: 3;
-        width: 100%;
-        @media(max-width: $sm - 0.01px) {
+    &__desktop {
+        @media(max-width: $md - 0.02px) {
             display: none;
         }
-        @media(min-width: $hd) {
-            margin-left: auto;
-            max-width: 895px;
-            order: 2;
-        }
 
-        .button {
-            flex-grow: 1;
-            @media(min-width: $sm) and (max-width: $hd - 0.01px) {
-                width: calc(100% / 4 - 24px * 3 / 4);
-            }
-        }
-
-        .footer__button {
-            @media(min-width: $hd) {
-                max-width: 180px;
-            }
-
-            &.button--light_blue {
-                @include hover {
-                    background-color: var(--blue_6);
-                }
-                @include active {
-                    background-color: var(--blue_6);
-                }
-            }
-        }
-
-        .footer__button--big {
-            @media(min-width: $hd) {
-                max-width: 280px;
-            }
-
-            span {
-                @media(max-width: $hd - 0.01px) {
-                    display: none;
-                }
-            }
-
-            svg {
-                @media(max-width: $hd - 0.01px) {
-                    height: 24px;
-                    width: 24px;
-                }
-            }
+        .footer__title {
+            font-size: 20px;
+            line-height: 1.2;
         }
     }
+}
 
-    &__blocks {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-        @media(min-width: $sm) {
-            flex-direction: row;
+.f-ratings {
+    &__layout {
+        &--mobile {
+            display: flex;
+            gap: 8px;
             flex-wrap: wrap;
-        }
-    }
 
-    &__block {
-        border-radius: 15px;
-        background-color: var(--grey_1);
-        border: 1px solid var(--blue_6);
-        padding: 24px 32px;
-        @media(min-width: $sm) {
-            width: calc(100% / 2 - 24px / 2);
-        }
-        @media(min-width: $hd) {
-            padding-left: 24px;
-            padding-right: 24px;
-            width: calc(100% / 4 - 24px * 3 / 4);
-        }
-
-        &--mod_1 {
-            padding-top: 32px;
-            @media(min-width: $hd) {
-                padding-left: 40px;
-                padding-right: 40px;
+            & > * {
+                width: calc(100% / 2 - 8px / 2);
             }
         }
 
-        .phone-block {
-            margin-bottom: 32px;
-        }
-    }
+        & > * {
+            display: block;
 
-    &__email-link {
-        align-items: center;
-        display: flex;
-        gap: 16px;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 1.2;
-        margin-bottom: 32px;
-        text-decoration: none;
-        @include hover {
-            color: var(--blue_10);
-        }
-        @include active {
-            color: var(--blue_10);
-        }
-
-        svg {
-            fill: var(--blue_1);
-            height: 20px;
-            width: 20px;
-        }
-    }
-
-    &__menu {
-        @include list-reset;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 1.25;
-        @media(min-width: $hd) {
-            font-size: 15px;
-        }
-    }
-
-    &__menu-item {
-        &:not(:last-child) {
-            margin-bottom: 16px;
-        }
-    }
-
-    &__menu-link {
-        position: relative;
-        text-decoration: none;
-        z-index: 1;
-        @include hover {
-            color: var(--blue_7);
-
-            &::after {
-                opacity: 1;
-            }
-        }
-        @include active {
-            color: var(--blue_8);
-        }
-
-        &::after {
-            background-color: var(--light_blue_1);
-            border-radius: 8px;
-            content: '';
-            height: calc(100% + 16px);
-            left: -8px;
-            opacity: 0;
-            position: absolute;
-            top: 50%;
-            transition: opacity 0.3s;
-            transform: translateY(-50%);
-            width: calc(100% + 16px);
-            z-index: -1;
-        }
-    }
-
-    &__bottom {
-        background-color: var(--grey_1);
-        padding-top: 48px;
-        padding-bottom: 48px;
-        /*@media(min-width: $sm) {
-            padding-bottom: 94px;
-        }
-        @media(min-width: $hd) {
-            padding-bottom: 67px;
-        }*/
-    }
-
-    &__bottom-links {
-        border-bottom: 1px solid var(--blue_5);
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-        margin-bottom: 16px;
-        padding-bottom: 24px;
-        @media(min-width: $sm) and (max-width: $hd - 0.01px) {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-        }
-        @media(min-width: $hd) {
-            flex-direction: row;
-            justify-content: space-between;
-        }
-
-        a {
-            color: var(--blue_4);
-            font-size: 15px;
-            line-height: 1.6;
-            text-decoration: none;
-            @include hover {
-                color: var(--blue_7);
-            }
-            @include active {
-                color: var(--blue_8);
-            }
-
-            &.link-with-icon {
-                color: var(--blue_3);
-                display: flex;
-                gap: 16px;
-                font-size: 16px;
-                font-weight: 500;
-                line-height: 1.5;
-
-                svg {
-                    fill: var(--blue_1);
-                    height: 24px;
-                    width: 24px;
-                }
-            }
-
-            &:nth-child(1) {
-                @media(min-width: $hd) {
-                    order: 4;
-                }
-            }
-
-            &:nth-child(2) {
-                @media(min-width: $hd) {
-                    order: 3;
-                }
-            }
-
-            &:nth-child(3) {
-                @media(min-width: $hd) {
-                    order: 1;
-                }
-            }
-
-            &:nth-child(4) {
-                @media(min-width: $hd) {
-                    order: 2;
-                }
-            }
-
-            &:nth-child(2),
-            &:nth-child(4) {
-                @media(min-width: $sm) and (max-width: $hd - 0.01px) {
-                    text-align: right;
-                }
-            }
-        }
-    }
-
-    &__bottom-bottom {
-        color: var(--grey_6);
-        font-size: 13px;
-        line-height: 1.23076;
-
-        p {
-            &:not(:last-child) {
-                margin-bottom: 16px;
-            }
-        }
-    }
-
-    &__copyrights {
-        display: flex;
-        gap: 24px;
-        justify-content: space-between;
-        @media(max-width: $sm - 0.01px) {
-            flex-direction: column;
-        }
-
-        a {
-            @include hover {
-                color: var(--grey_5);
-            }
-            @include active {
-                color: var(--grey_4);
+            img {
+                display: block;
             }
         }
     }
 }
 
-.socials {
-    &__title {
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 1.2;
-        margin-bottom: 24px;
+.f-reqs {
+    p {
+        &:not([class]) {
+            &:not(:last-child) {
+                margin-bottom: 8px;
+            }
+        }
+    }
+}
+
+.f-gos {
+    p {
+        &:not([class]) {
+            color: var(--blue_light);
+            opacity: 0.6;
+        }
+    }
+}
+
+.f-socials {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+
+    .social-link {
+        color: #fff;
+    }
+}
+
+.f-service-menu {
+    @include list-reset;
+    color: rgba(255,255,255,0.6);
+
+    li {
+        &:not(:last-child) {
+            margin-bottom: 16px;
+        }
     }
 
-    &__links {
+    a {
+        color: currentColor;
+        text-decoration: none;
+        transition: color 0.3s;
+        @include hover {
+            color: #fff;
+        }
+        @include active {
+            color: #fff;
+        }
+    }
+}
+
+.coala {
+    display: flex;
+    gap: 8px;
+
+    svg {
+        fill: currentColor;
+        height: 24px;
+        min-width: 35px;
+        width: 35px;
+    }
+}
+
+.f-accordion {
+    &:not(:last-child) {
+        border-bottom: 1px solid rgba(239, 248, 255, 0.35);
+    }
+
+    &__toggler {
+        @include button-reset;
+        align-items: center;
         display: flex;
-        gap: 24px;
-    }
+        font-size: 16px;
+        font-weight: 600;
+        gap: 8px;
+        min-height: 48px;
+        justify-content: space-between;
+        width: 100%;
 
-    &__link {
-        border-radius: 50%;
-        display: block;
-        height: 43px;
-        transition: background-color 0.3s;
-        width: 43px;
+        &.is-active {
+            svg {
+                transform: rotate(180deg);
+            }
+        }
 
         svg {
-            fill: var(--white_1);
-            height: 43px;
-            width: 43px;
+            fill: currentColor;
+            height: 16px;
+            min-width: 16px;
+            width: 16px;
+        }
+    }
+
+    &__body {
+        display: none;
+        font-size: 16px;
+        line-height: 1.5;
+        padding-bottom: 16px;
+
+        a {
+            color: #fff;
+            text-decoration: none;
         }
 
-        &--vk {
-            background-color: var(--blue_9);
-            @include hover {
-                background-color: var(--blue_11);
+        p {
+            &:not(:last-child) {
+                margin-bottom: 8px;
             }
         }
+    }
 
-        &--od {
-            background-color: var(--orange_1);
-            @include hover {
-                background-color: #ca6105;
-            }
-        }
+    &__menu {
+        @include list-reset;
 
-        &--yt {
-            background-color: var(--red_5);
-            @include hover {
-                background-color: var(--red_4);
+        li {
+            &:not(:last-child) {
+                margin-bottom: 8px;
             }
         }
     }
